--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -236,8 +236,8 @@
     "api_docs": "Steemit API Docs",
     "bluepaper": "Steem Bluepaper",
     "whitepaper": "Steem Whitepaper",
-    "intro_tagline": "Money talks",
-    "intro_paragraph": "Your voice is worth something. Join the community that pays you to post and curate high quality content."
+    "intro_tagline": "Welcome to the WhaleShares community",
+    "intro_paragraph": "Your voice is worth something. Join the community that pays you to post."
   },
   "main_menu": {
     "hot": "hot",
