Added Whaleshares logo in link sharing preview, added a small logo for small sizes, fixed margins in the header, small fixes

--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -236,8 +236,8 @@
     "api_docs": "API Docs",
     "bluepaper": "Steem Bluepaper",
     "whitepaper": "Steem Whitepaper",
-    "intro_tagline": "Welcome to the WhaleShares community",
-    "intro_paragraph": "Your voice is worth something. Join the community that pays you to post."
+    "intro_tagline": "Share Value. Receive Value",
+    "intro_paragraph": "Welcome to Whaleshares community!"
   },
   "main_menu": {
     "hot": "hot",
