--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -556,7 +556,7 @@
     "to_comment_and_reward_others": " to comment and reward others.",
     "signup_button": "Sign up now to earn ",
     "signup_button_emphasis": "FREE STEEM!",
-    "sign_up_get_steem": "Sign up. Get STEEM",
+    "sign_up_get_steem": "Sign up",
     "returning_users": "Returning Users: ",
     "join_our": "Join our"
   },
