--- a/src/app/locales/ru.json
+++ b/src/app/locales/ru.json
@@ -478,7 +478,7 @@
     "estimated_value": "Сметная стоимость основана на среднем значении %(LIQUID_TOKEN)s в долларах США.",
     "non_transferable": "%(VESTING_TOKEN)s - не ликвидные токены, требуется три месяца (13 еженедальных выплат) чтобы сконвертировать их в ликвидные токены %(LIQUID_TOKEN)s.",
     "converted_VESTING_TOKEN_can_be_sent_to_yourself_but_can_not_transfer_again": "Конвертированные %(VESTING_TOKEN)s токены могут быть отправлены себе или кому-либо еще, но не могут быть переданы вновь без конвертации в %(LIQUID_TOKEN)s.",
-    "part_of_your_steem_power_is_currently_delegated": "Часть STEEM POWER вам делегирована, это увеличивает ваше влияние на платформе. Количество делегированных токенов со временем может изменяться."
+    "part_of_your_steem_power_is_currently_delegated": "Часть WLS POWER вам делегирована, это увеличивает ваше влияние на платформе. Количество делегированных токенов со временем может изменяться."
   },
   "promote_post_jsx": {
     "promote_post": "Продвинуть пост",
@@ -647,7 +647,7 @@
     "transfers_are_temporary_disabled": "Переводы временно преостановлены.",
     "history": "ИСТОРИЯ",
     "redeem_rewards": "Получить вознаграждение",
-    "buy_steem_or_steem_power": "Купить STEEM или STEEM POWER"
+    "buy_steem_or_steem_power": "Купить WLS или WLS POWER"
   },
   "powerdown_jsx": {
     "power_down": "Уменьшить силу голоса (power down)",
