clean Terms of Use, Welcome, Faqs..
https://gitlab.com/beyondbitcoin/whaleshares-web/issues/6
https://gitlab.com/beyondbitcoin/whaleshares-web/issues/7

--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -183,8 +183,8 @@
     "please_email_questions_to": "Please email your questions to",
     "next_7_strings_single_block": {
       "authors_get_paid_when_people_like_you_upvote_their_post": "Authors get paid when people like you upvote their post",
-      "if_you_enjoyed_what_you_read_earn_amount": "If you enjoyed what you read here, create your account today and start earning FREE STEEM!",
-      "free_steem": "FREE STEEM!",
+      "if_you_enjoyed_what_you_read_earn_amount": "If you enjoyed what you read here, create your account today and start earning FREE WLS!",
+      "free_steem": "FREE WLS!",
       "sign_up_earn_steem": "Sign up now to earn "
     },
     "next_3_strings_together": {
@@ -555,7 +555,7 @@
     "amazing_community": "amazing community",
     "to_comment_and_reward_others": " to comment and reward others.",
     "signup_button": "Sign up now to earn ",
-    "signup_button_emphasis": "FREE STEEM!",
+    "signup_button_emphasis": "FREE WLS!",
     "sign_up_get_steem": "Sign up",
     "returning_users": "Returning Users: ",
     "join_our": "Join our"
