--- a/src/app/locales/it.json
+++ b/src/app/locales/it.json
@@ -552,9 +552,9 @@
     "keep_me_logged_in": "Voglio restare connesso",
     "amazing_community": "una comunità incredibile",
     "to_comment_and_reward_others": "per commentare e premiare gli altri. ",
-    "sign_up_get_steem": "Sign up. Get STEEM",
+    "sign_up_get_steem": "Sign up. Get WLS",
     "signup_button": "Sign up now to earn ",
-    "signup_button_emphasis": "FREE STEEM!",
+    "signup_button_emphasis": "FREE WLS!",
     "returning_users": "Utenti di ritorno:",
     "join_our": "Unisciti al nostro"
   },
