--- a/src/app/locales/ru.json
+++ b/src/app/locales/ru.json
@@ -183,8 +183,8 @@
     "please_email_questions_to": "Пожалуйста, шлите ваши вопросы на электронную почту",
     "next_7_strings_single_block": {
       "authors_get_paid_when_people_like_you_upvote_their_post": "Авторы получают вознаграждение, когда пользователи голосуют за их посты",
-      "if_you_enjoyed_what_you_read_earn_amount": "Если Вам понравилось то, что Вы здесь прочитали, создайте свой аккаунт сегодня и начните зарабатывать БЕСПЛАТНЫЕ STEEM-ы!",
-      "free_steem": "БЕСПЛАТНЫЕ STEEM!",
+      "if_you_enjoyed_what_you_read_earn_amount": "Если Вам понравилось то, что Вы здесь прочитали, создайте свой аккаунт сегодня и начните зарабатывать БЕСПЛАТНЫЕ WLS-ы!",
+      "free_steem": "БЕСПЛАТНЫЕ WLS!",
       "sign_up_earn_steem": "Зарегистрируйтесь сейчас, чтобы заработать "
     },
     "next_3_strings_together": {
