--- a/src/app/locales/es.json
+++ b/src/app/locales/es.json
@@ -552,9 +552,9 @@
     "keep_me_logged_in": "Manténme logeado",
     "amazing_community": "comunidad increíble",
     "to_comment_and_reward_others": "para comentar y recompensar a otros",
-    "sign_up_get_steem": "Sign up. Get STEEM",
+    "sign_up_get_steem": "Sign up. Get WLS",
     "signup_button": "Sign up now to earn ",
-    "signup_button_emphasis": "FREE STEEM!",
+    "signup_button_emphasis": "FREE WLS!",
     "returning_users": "Usuarios que vuelven",
     "join_our": "Únete a nuestro"
   },
