--- a/src/app/locales/fr.json
+++ b/src/app/locales/fr.json
@@ -552,9 +552,9 @@
     "keep_me_logged_in": "Gardez-moi connecté",
     "amazing_community": "communauté extraordinaire",
     "to_comment_and_reward_others": " pour commenter et récompenser les autres.",
-    "sign_up_get_steem": "Sign up. Get STEEM",
+    "sign_up_get_steem": "Sign up. Get WLS",
     "signup_button": "Sign up now to earn ",
-    "signup_button_emphasis": "FREE STEEM!",
+    "signup_button_emphasis": "FREE WLS!",
     "returning_users": "Utilisateurs de retour :",
     "join_our": "Rejoignez notre"
   },
