--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -558,9 +558,9 @@
     "public_profile_settings": "Public Profile Settings",
     "private_post_display_settings": "Private Post Display Settings",
     "not_safe_for_work_nsfw_content": "Not safe for work (NSFW) content",
-    "always_hide": "Always hide",
-    "always_warn": "Always warn",
-    "always_show": "Always show",
+    "always_hide": "Always Hide from My Feeds",
+    "always_warn": "Warn and Hide Preview",
+    "always_show": "Always Show in My Feeds",
     "muted_users": "Muted Users",
     "update": "Update",
     "profile_image_url": "Profile picture url",
