--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -63,8 +63,6 @@
     "previous": "Previous",
     "price": "Price",
     "print": "Print",
-    "promote": "Promote",
-    "promoted": "promoted",
     "re": "RE",
     "re_to": "RE: %(topic)s",
     "recent_password": "Recent Password",
@@ -234,8 +232,8 @@
     "chat": "Chat",
     "app_center": "App Center",
     "api_docs": "API Docs",
-    "bluepaper": "Steem Bluepaper",
-    "whitepaper": "Steem Whitepaper",
+    "bluepaper": "Bluepaper",
+    "whitepaper": "Whitepaper",
     "intro_tagline": "Share Value. Receive Value",
     "intro_paragraph": "Welcome to Whaleshares community!",
     "explorer": "Blockchain Explorer"
@@ -358,7 +356,7 @@
     "fraud_or_plagiarism": "Fraud or Plagiarism",
     "hate_speech_or_internet_trolling": "Hate Speech or Internet Trolling",
     "intentional_miss_categorized_content_or_spam": "Intentional miss-categorized content or Spam",
-    "pending_payout": "Pending Payout $%(value)s",
+    "pending_payout": "Pending Payout %(value)s WLS",
     "payout_declined": "Payout Declined",
     "max_accepted_payout": "Max Accepted Payout $%(value)s",
     "promotion_cost": "Promotion Cost $%(value)s",
@@ -377,6 +375,8 @@
     }
   },
   "witnesses_jsx": {
+    "external_site": "external site",
+    "disabled": "disabled",
     "witness_thread": "witness thread",
     "top_witnesses": "Witness Voting",
     "you_have_votes_remaining": {
@@ -437,12 +437,10 @@
     "estimated_value": "The estimated value is based on an average value of %(LIQUID_TOKEN)s in US dollars.",
     "non_transferable": "%(VESTING_TOKEN)s is non-transferable and requires 3 months (13 payments) to convert back to %(LIQUID_TOKEN)s.",
     "converted_VESTING_TOKEN_can_be_sent_to_yourself_but_can_not_transfer_again": "Converted %(VESTING_TOKEN)s can be sent to yourself or someone else but can not transfer again without converting back to %(LIQUID_TOKEN)s.",
-    "part_of_your_steem_power_is_currently_delegated": "Part of your WHALESTAKE is currently delegated to you. Delegation is donated for influence or to help new users perform actions. Your delegation amount can fluctuate."
+    "part_of_your_steem_power_is_currently_delegated": "Part of your WHALESTAKE is currently delegated to you. Delegation is donated for influence or to help new users perform actions. Your delegation amount can fluctuate.",
+    "mana": "Mana is like an energy bar in a computer game that goes down a little bit every time you vote. You start out with 100 percent mana. Every time you share, you will use a small amount of your mana."
   },
   "promote_post_jsx": {
-    "promote_post": "Promote Post",
-    "spend_your_DEBT_TOKEN_to_advertise_this_post": "Spend your %(DEBT_TOKEN)s's to advertise this post in the promoted content section",
-    "you_successfully_promoted_this_post": "You successfully promoted this post",
     "this_post_was_hidden_due_to_low_ratings": "This post was hidden due to low ratings"
   },
   "about_jsx": {
@@ -477,13 +475,6 @@
     "stop_power_down": "Stop power down",
     "start_power_down_of": "Start power down of",
     "receive_interest_of": "Receive interest of"
-  },
-  "savingswithdrawhistory_jsx": {
-    "cancel_this_withdraw_request": "Cancel this withdraw request?",
-    "pending_savings_withdrawals": "PENDING SAVINGS WITHDRAWS",
-    "withdraw": "Withdraw %(amount)s",
-    "to": "to %(to)s",
-    "from_to": "from %(from)s to %(to)s"
   },
   "explorepost_jsx": {
     "copied": "Copied!",
