--- a/src/app/locales/ru.json
+++ b/src/app/locales/ru.json
@@ -451,8 +451,7 @@
     "influence_token": "Токены дают вам возможность влиять на вознаграждения за контент, а также возможность зарабатывать на курации контента.",
     "estimated_value": "Сметная стоимость основана на среднем значении %(LIQUID_TOKEN)s в долларах США.",
     "non_transferable": "%(VESTING_TOKEN)s - не ликвидные токены, требуется три месяца (13 еженедальных выплат) чтобы сконвертировать их в ликвидные токены %(LIQUID_TOKEN)s.",
-    "converted_VESTING_TOKEN_can_be_sent_to_yourself_but_can_not_transfer_again": "Конвертированные %(VESTING_TOKEN)s токены могут быть отправлены себе или кому-либо еще, но не могут быть переданы вновь без конвертации в %(LIQUID_TOKEN)s.",
-    "part_of_your_steem_power_is_currently_delegated": "Часть WLS POWER вам делегирована, это увеличивает ваше влияние на платформе. Количество делегированных токенов со временем может изменяться."
+    "converted_VESTING_TOKEN_can_be_sent_to_yourself_but_can_not_transfer_again": "Конвертированные %(VESTING_TOKEN)s токены могут быть отправлены себе или кому-либо еще, но не могут быть переданы вновь без конвертации в %(LIQUID_TOKEN)s."
   },
   "promote_post_jsx": {
     "this_post_was_hidden_due_to_low_ratings": "Этот пост был скрыт из-за низкого рейтинга"
@@ -604,7 +603,6 @@
     "convert_to_LIQUID_TOKEN": "Перевести в %(LIQUID_TOKEN)s",
     "withdraw_LIQUID_TOKEN": "Снять %(LIQUID_TOKEN)s",
     "withdraw_DEBT_TOKENS": "Снять %(DEBT_TOKENS)s",
-    "tokens_worth_about_1_of_LIQUID_TICKER": "Стоимость токенов $1.00 в %(LIQUID_TICKER)s, начисляемые годовые %(sbdInterest)s%%.",
     "savings": "Сберегательный счет",
     "estimated_account_value": "Приблизительная стоимость аккаунта",
     "next_power_down_is_scheduled_to_happen": "Следующее понижение силы голоса будет",
