--- a/src/app/locales/es.json
+++ b/src/app/locales/es.json
@@ -4,10 +4,8 @@
     "amount": "Cantidad",
     "and": "y",
     "are_you_sure": "¿Estás seguro?",
-    "ask": "Preguntar",
     "balance": "Saldo",
     "balances": "Saldos",
-    "bid": "Oferta",
     "blog": "Blog",
     "browse": "Navegar",
     "buy": "Comprar",
@@ -15,14 +13,12 @@
     "by": "por",
     "cancel": "Cancelar",
     "change_password": "Cambiar Contraseña",
-    "choose_language": "Elegir Idioma",
     "clear": "Limpiar",
     "close": "Cerrar",
     "collapse_or_expand": "Plegar/Expandir",
     "comments": "Comentarios",
     "confirm": "Confirmar",
     "convert": "Convertir",
-    "date": "Fecha",
     "delete": "Borrar",
     "dismiss": "Descartar",
     "edit": "Editar",
@@ -58,10 +54,8 @@
     "post": "Publicación",
     "post_as": "Publicar como",
     "posts": "Publicaciones",
-    "powered_up_100": "Powered Up 100 %%",
     "preview": "Vista previa",
     "previous": "Anterior",
-    "price": "Precio",
     "print": "Imprimir",
     "re": "RE",
     "re_to": "RE %(topic)s",
@@ -97,10 +91,10 @@
     "submit_a_story": "Publicar",
     "tag": "Etiqueta",
     "to": "hasta",
+    "toggle_nightmode": "Toggle Night Mode",
     "all_tags": "All tags",
     "transfer": "Transferir",
     "trending_topics": "Temas Tendencia",
-    "type": "Tipo",
     "unfollow": "Dejar de seguir",
     "unmute": "Desmutear",
     "unknown": "Desconocido",
@@ -179,14 +173,7 @@
     "please_email_questions_to": "Por favor, envía un mail con tus dudas a",
     "next_7_strings_single_block": {
       "authors_get_paid_when_people_like_you_upvote_their_post": "Autores cobran cuando gente como tú vota por sus posts",
-      "if_you_enjoyed_what_you_read_earn_amount": "Si te ha gustado lo que has leído aquí, crea tu cuenta hoy mismo y empieza a ganar STEEM!",
-      "free_steem": "¡STEEM GRATIS!",
-      "sign_up_earn_steem": "Regístrate ahora para ganar"
-    },
-    "next_3_strings_together": {
-      "show_more": "Mostrar más",
-      "show_less": "Mostrar menos",
-      "value_posts": "Posts de bajo valor"
+      "if_you_enjoyed_what_you_read_earn_amount": "Si te ha gustado lo que has leído aquí, crea tu cuenta hoy mismo y empieza a ganar WLS!"
     },
     "read_only_mode": "Debido a tareas de mantenimiento de los servidores, solo el modo lectura está disponible. Perdonen las molestias",
     "tags_and_topics": "Etiquetas y Temas",
@@ -213,27 +200,16 @@
     "about": "Sobre",
     "explore": "Explorar",
     "APP_NAME_whitepaper": "%(APP_NAME)s Documentación técnica",
-    "buy_LIQUID_TOKEN": "Comprar %(LIQUID_TOKEN)s",
-    "sell_LIQUID_TOKEN": "Vender %(LIQUID_TOKEN)s",
-    "currency_market": "Mercado de monedas",
     "stolen_account_recovery": "Recuperación de cuentas robadas",
     "change_account_password": "Cambia la contraseña de la cuenta",
     "witnesses": "Testigos",
-    "vote_for_witnesses": "Vota a los testigos",
     "privacy_policy": "Política de Privacidad",
     "terms_of_service": "Términos del Servicio",
     "sign_up": "Unirse",
     "learn_more": "Para saber más",
-    "welcome": "Bienvenido",
-    "faq": "Preguntas Frecuentes",
-    "shop": "The Steemit Shop",
-    "chat": "Chat de Steemit",
-    "app_center": "Centro de Aplicaciones Steemit",
-    "api_docs": "Documentos API de Steemit",
-    "bluepaper": "Steem Bluepaper",
-    "whitepaper": "Libro blanco de Steem",
     "intro_tagline": "El dinero habla.",
-    "intro_paragraph": "Tu voz tiene valor. Únete a la comunidad que te paga por publicar y votar contenido de alta calidad"
+    "intro_paragraph": "Tu voz tiene valor. Únete a la comunidad que te paga por publicar y votar contenido de alta calidad",
+    "explorer": "Blockchain Explorer"
   },
   "main_menu": {
     "hot": "en alza",
@@ -253,7 +229,6 @@
     "selecting_them": "Seleccionándolos",
     "image_upload": "Subir imagen",
     "power_up_100": "Power Up 100%%",
-    "default_50_50": "Por defecto (50 1%% / 50 1%%)",
     "decline_payout": "Rechazar Pago",
     "check_this_to_auto_upvote_your_post": "Seleciona para autovotarte el post",
     "markdown_styling_guide": "Guía para el Markdown",
@@ -356,7 +331,6 @@
     "pending_payout": "Pago pendiente $ %(value)s",
     "payout_declined": "Pago rehusado",
     "max_accepted_payout": "Máximo pago aceptado $ %(value)s",
-    "promotion_cost": "Coste de promoción $ %(value)s",
     "past_payouts": "Pagos pasados $ %(value)s",
     "past_payouts_author": "Autor $ %(value)s",
     "past_payouts_curators": "Curador $ %(value)s",
@@ -372,7 +346,8 @@
     }
   },
   "witnesses_jsx": {
-    "witness_thread": "tema testigo",
+    "external_site": "external site",
+    "disabled": "disabled",
     "top_witnesses": "Votación para testigo",
     "you_have_votes_remaining": {
       "zero": "No tienes votos restantes",
@@ -429,9 +404,9 @@
   "tips_js": {
     "liquid_token": "Tokens canjeables pueden ser transferidos a cualquier sitio en cualquier momento.1%(LIQUID_TOKEN)s y pueden ser convertidos a %(VESTING_TOKEN)s en un proceso llamado power up.",
     "influence_token": "Tokens con influencia te dan más control sobre los pagos de los posts y te permiten ganar recompensas de curación",
-    "estimated_value": "El valor estimado está basado en el valor medio de 1%(LIQUID_TOKEN)s en US dollars.",
     "non_transferable": "%(VESTING_TOKEN)s es intransferible y requiere 3 meses (13 pagos) para convertir de vuelta a %(LIQUID_TOKEN)s.",
-    "converted_VESTING_TOKEN_can_be_sent_to_yourself_but_can_not_transfer_again": "Los %(VESTING_TOKEN)s convertidos pueden ser enviados a ti mismo o a otras personas pero no pueden ser transferidos de nuevo sin convertirlos de vuelta a %(LIQUID_TOKEN)s."
+    "converted_VESTING_TOKEN_can_be_sent_to_yourself_but_can_not_transfer_again": "Los %(VESTING_TOKEN)s convertidos pueden ser enviados a ti mismo o a otras personas pero no pueden ser transferidos de nuevo sin convertirlos de vuelta a %(LIQUID_TOKEN)s.",
+    "mana": "MANA is the % of rewarding power your account has. Each time you share/reward a post or comment your MANA is reduced by 2%. MANA is recharged at a rate of 20% per day. MANA and WHALESTAKE are used to calculate your reward value."
   },
   "promote_post_jsx": {
     "this_post_was_hidden_due_to_low_ratings": "El post ha sido ocultado por bajas calificaciones"
@@ -471,8 +446,7 @@
   },
   "explorepost_jsx": {
     "copied": "¡Copiado!",
-    "copy": "COPIAR",
-    "alternative_sources": "Fuentes alternativas"
+    "copy": "COPIAR"
   },
   "header_jsx": {
     "home": "inicio",
@@ -516,8 +490,6 @@
     "amazing_community": "comunidad increíble",
     "to_comment_and_reward_others": "para comentar y recompensar a otros",
     "sign_up_get_steem": "Sign up. Get WLS",
-    "signup_button": "Sign up now to earn ",
-    "signup_button_emphasis": "FREE WLS!",
     "returning_users": "Usuarios que vuelven",
     "join_our": "Únete a nuestro"
   },
@@ -564,27 +536,19 @@
     "this_memo_is_private": "Esta memo es privada",
     "this_memo_is_public": "Esta memo es pública",
     "convert_to_VESTING_TOKEN": "Convertir a %(VESTING_TOKEN)s",
-    "balance_subject_to_3_day_withdraw_waiting_period": "El saldo está sujeto a 3 días de espera para la retirada",
     "move_funds_to_another_account": "Mover fondos a otra %(APP_NAME)scuenta.",
     "protect_funds_by_requiring_a_3_day_withdraw_waiting_period": "Protege los fondos al pedir la retirada con un periodo de 3 días de espera",
     "withdraw_funds_after_the_required_3_day_waiting_period": "Retirada de fondos después del periodo de 3 días de espera",
     "from": "De",
     "to": "Para",
-    "asset_currently_collecting": "%(asset)s recolectando actualmente %(interest)s%% APR.",
     "beware_of_spam_and_phishing_links": "Beware of spam and phishing links in transfer memos. Do not open links from users you do not trust. Do not provide your private keys to any third party websites."
   },
   "userwallet_jsx": {
-    "conversion_complete_tip": "Se completará el",
-    "in_conversion": "%(amount)s en conversión",
     "transfer_to_savings": "Transferir a ahorros",
     "power_up": "Power up",
     "power_down": "Power down",
     "market": "Mercado",
     "convert_to_LIQUID_TOKEN": "Convertir a %(LIQUID_TOKEN)s",
-    "withdraw_LIQUID_TOKEN": "Retirar %(LIQUID_TOKEN)s",
-    "withdraw_DEBT_TOKENS": "Retirar %(DEBT_TOKENS)s",
-    "savings": "AHORROS",
-    "estimated_account_value": "Valor de cuenta aproximado",
     "next_power_down_is_scheduled_to_happen": "El siguiente power down ocurrirá en ",
     "transfers_are_temporary_disabled": "Las transferencias están temporalmente inhabilitadas.",
     "history": "HISTORIA",
