--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -91,6 +91,7 @@
     "show": "Show",
     "sign_in": "Sign in",
     "sign_up": "Sign up",
+    "claim_acc": "Claim Account",
     "since": "since",
     "submit": "Submit",
     "power_up": "Power Up",
